--- a/src/app/components/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/components/home/novo-usuario/novo-usuario.component.html
@@ -52,6 +52,10 @@
     placeholder="Senha"
     formControlName="password"
     />
+  <app-mensagem
+    *ngIf="novoUsuarioForm.errors?.['senhaIgualUsuario']"
+    mensagem="Senha deve ser diferente do usuário">
+  </app-mensagem>
 </div>
 
 <button class="btn btn-primary btn-block">Cadastro</button>
