Fixed error in cabecalho.component

--- a/src/app/components/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/components/componentes/cabecalho/cabecalho.component.html
@@ -2,8 +2,8 @@
   <nav class="navbar navbar-light bg-white">
     <a class="navbar-brand">
       <i class="fa fa-bars mr-2"
-        (click)="menu.abreMenu()"
-        (keyup.space)="menu.abreMenu()"
+        (click)="menu?.abreMenu()"
+        (keyup.space)="menu?.abreMenu()"
       >
       </i>
       Gatito Book
