--- a/src/app/components/componentes/menu/menu.component.html
+++ b/src/app/components/componentes/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div *ngClass="{'active-menu': mostraMenu}">
+<div [ngClass]="{'active-menu': mostraMenu}">
   <div class="menu-bar">
     <i class="fa fa-window-close" (click)="abreMenu()" (keyup.space)="abreMenu()"></i>
   </div>
