--- a/src/app/components/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/components/componentes/cabecalho/cabecalho.component.html
@@ -1,9 +1,10 @@
 <header class="sticky-top">
   <nav class="navbar navbar-light bg-white">
     <a class="navbar-brand">
-      <i class="fa fa-bars mr-2"
-        (click)="menu?.abreMenu()"
-        (keyup.space)="menu?.abreMenu()"
+      <i
+        class="fa fa-bars mr-2"
+        (click)="menu.abreMenu()"
+        (keyup.space)="menu.abreMenu()"
       >
       </i>
       Gatito Book
@@ -18,15 +19,16 @@
     </app-menu>
 
     <div *ngIf="user$ | async as user">
-      <div *ngIf="user.name else login">
-        <i class="fa fa-user-circle mr-1"></i>
-        <a class=""mr-1>{{user.name}}</a>
+      <div *ngIf="user.name; else login">
+        <i class="fa fa-user-circle mr-1"> </i>
+        <a class="mr-1">{{ user.name }}</a>
         <a (click)="logout()">Logout</a>
       </div>
-  </div>
+    </div>
   </nav>
+
   <ng-template #login>
-    <span class="navbar-text ">
+    <span class="navbar-text">
       <a [routerLink]="['']">Login</a>
     </span>
   </ng-template>
