Fixed template of novo-animal

--- a/src/app/components/animais/novo-animal/novo-animal.component.html
+++ b/src/app/components/animais/novo-animal/novo-animal.component.html
@@ -51,7 +51,7 @@
       <a [routerLink]="['animais']" class="btn btn-secondary btn-block"> Cancelar</a>
       </div>
       <ng-template #uploadDiv>
-        <div class="text-center display-4">Percentual de upload</div>
+        <div class="text-center display-4">Percentual de upload {{percentualConcluido}}%</div>
       </ng-template>
     </div>
   </form>
