--- a/src/app/components/animais/novo-animal/novo-animal.component.html
+++ b/src/app/components/animais/novo-animal/novo-animal.component.html
@@ -47,6 +47,7 @@
         type="submit"
         class="btn btn-primary btn-block"
         >
+        Enviar
       </button>
       <a [routerLink]="['animais']" class="btn btn-secondary btn-block"> Cancelar</a>
       </div>
